src/test/ui/pub/pub-ident-fn-or-struct-2.stderr
error: missing `fn` or `struct` for method or struct definition
  --> $DIR/pub-ident-fn-or-struct-2.rs:11:4
   |
LL | pub S();
   | ---^- help: if you meant to call a macro, try: `S!`

error: aborting due to previous error

